# ibus-skk

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac  ibus-skk.conf.example  ibus-skk.json.example  ibus-skk.spec.in  skk.xml.in.in
engine/: .gitignore  Makefile.am  SKK-JISYO.S-numeric.patch  engine.py  factory.py  ibus-engine-skk.in  kzik.py  main.py  nicola.py  skk.py  skk.xml.in  skk.xml.in.in  test.py  virtkbd.py
icons/: Makefile.am
m4/: Makefile.am  ibus.m4
po/: Makevars  POTFILES.in  POTFILES.skip  ja.po
scripts/: Makefile.am  ibus-skk-convert-jisyo.in
setup/: .gitignore  Makefile.am  config.py  ibus-setup-skk.in  ibus-skk-preferences.ui  ibus-skk-preferences.ui.in  main.py
src/: Makefile.am  config.vapi  engine.vala  ibus-1.0.vapi  ibus-setup-skk.desktop.in.in  ibus-skk-preferences.ui.in  ibus-skk.deps  org.freedesktop.ibus.engine.skk.gschema.xml  plist.vala  preferences.vala  setup.vala  skk.xml.in.in
