# vim:set noet ts=4:
#
# ibus-skk - The SKK engine for IBus
#
# Copyright (C) 2010 Daiki Ueno <ueno@unixuser.org>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

bin_SCRIPTS = ibus-skk-convert-jisyo
CLEANFILES = $(bin_SCRIPTS)
EXTRA_DIST = ibus-skk-convert-jisyo.in
